syntax = "proto3";
import "user.proto";
import "google/protobuf/timestamp.proto";

package pb;

option go_package = "vuongtran/learning/simplebank/pb";

message LoginUserRequest{
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string session_id = 1;
  string     access_token = 2;
  string     refresh = 3;
  google.protobuf.Timestamp access_token_expires_at = 4;
  google.protobuf.Timestamp   refresh_token_expires_at = 5;
  User user = 6;
}




