syntax = "proto3";
import "user.proto";
import "rpc_create_user.proto";

package pb;

option go_package = "vuongtran/learning/simplebank";


service SimpleBank{
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {

  }

  rpc
}